fix(NumberFlowInput): set span display to `inline-block` for proper layout alignment

--- a/components/NumberFlowInput/NumberFlowInput.module.scss
+++ b/components/NumberFlowInput/NumberFlowInput.module.scss
@@ -19,6 +19,10 @@
   line-height: 1;
   outline: none;
 
+  span {
+    display: inline-block;
+  }
+
   :is([data-flow]) {
     transition: translate 0.2s var(--ease-out-cubic);
     translate: 0 100%;
